added axios and api

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "utendo-regular";
 }
 
 /* ######### RESPONSIVE ######### */
